Implement case analysis and induction.